--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,183 @@
+absl-py==1.0.0
+affine==2.3.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+alphashape==1.3.1
+appdirs==1.4.4
+apptools==5.1.0
+asgiref==3.5.1
+asttokens==2.0.5
+async-timeout==4.0.2
+atomicwrites==1.4.0
+attrs==20.2.0
+aws-requests-auth==0.4.3
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.10.0
+black==21.12b0
+boto3==1.15.18
+botocore==1.18.18
+branca==0.4.2
+cachetools==4.2.1
+certifi==2020.6.20
+cffi==1.14.5
+cftime==1.5.0
+chardet==4.0.0
+charset-normalizer==2.0.10
+click==7.1.2
+click-log==0.3.2
+click-plugins==1.1.1
+cligj==0.5.0
+colorama==0.4.4
+configobj==5.0.6
+coverage==6.2
+cupy-cuda112==8.5.0
+cycler==0.10.0
+Cython==0.29.22
+decorator==5.1.1
+descartes==1.1.0
+distfit==1.4.2
+dj-database-url==0.5.0
+Django==4.0.4
+django-geojson==3.2.1
+django-heroku==0.3.1
+dnspython==2.1.0
+earthengine-api==0.1.262
+envisage==6.0.1
+esda==2.4.1
+executing==0.8.2
+fastrlock==0.5
+feather-format==0.4.1
+Flask==2.0.2
+Flask-Cors==3.0.10
+Flask-JSON==0.3.4
+folium==0.12.1
+frozenlist==1.2.0
+future==0.18.2
+geojson==2.5.0
 geopandas==0.10.2
+google-api-core==1.26.3
+google-api-python-client==1.12.8
+google-auth==1.29.0
+google-auth-httplib2==0.1.0
+google-cloud-core==1.6.0
+google-cloud-storage==1.37.1
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.53.0
 gunicorn==20.1.0
+httplib2==0.19.1
+httplib2shim==0.0.3
+idna==2.10
+imageio==2.9.0
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
+iniconfig==1.1.1
+ipython==8.0.0
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+jmespath==0.10.0
+joblib==0.16.0
+jsonlines==1.2.0
+jsonschema==3.2.0
+kiwisolver==1.2.0
+libpysal==4.5.1
+llvmlite==0.34.0
+mapclassify==2.4.3
+MarkupSafe==2.0.1
+matplotlib==3.3.2
+matplotlib-inline==0.1.3
+mayavi==4.7.4
+mogptk==0.2.6
+mpmath==1.2.1
+multidict==5.2.0
+munch==2.5.0
+mypy-extensions==0.4.3
+netCDF4==1.5.7
+networkx==2.6.3
+numba==0.51.2
+numpy==1.19.2
+ortools==9.3.10459
+packaging==20.9
 pandas==1.1.2
+parso==0.8.3
+pathlib==1.0.1
+pathspec==0.9.0
+patsy==0.5.1
+pickleshare==0.7.5
+Pillow==7.2.0
+platformdirs==2.4.1
+plotly==5.3.1
+pluggy==1.0.0
+progressbar2==3.53.1
+prompt-toolkit==3.0.24
+protobuf==3.19.4
+psycopg2==2.9.2
+pure-eval==0.2.1
+py==1.11.0
+pyarrow==1.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyface==7.3.0
+pygam==0.8.0
+pygeos==0.8
+Pygments==2.11.1
+pyparsing==2.4.7
+pypickle==1.0.0
+pyproj==2.6.1.post1
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyrsistent==0.18.0
+pyshp==2.1.3
+python-dateutil==2.8.0
+python-utils==2.5.6
+pytz==2020.1
+PyYAML==6.0
+quantecon==0.5.2
+requests==2.25.1
+requests-futures==1.0.0
+rsa==4.7.2
+Rtree==0.9.7
+s3transfer==0.3.7
+scikit-gstat==0.6.11
+scikit-learn==1.0.2
+scipy==1.5.2
+seaborn==0.11.0
+seglearn==1.2.3
+Shapely==1.7.1
+simplejson==3.17.5
+six==1.15.0
+snuggs==1.4.7
+soupsieve==2.3.1
+spaghetti==1.6.5
+spglm==1.0.8
+spreg==1.2.4
+sqlparse==0.4.2
+stack-data==0.1.3
+statsmodels==0.12.1
+sympy==1.9
+tenacity==8.0.1
+threadpoolctl==2.1.0
+toml==0.10.2
+tomli==1.2.3
+torch==1.10.1
+tqdm==4.62.3
+traitlets==5.1.1
+traits==6.3.2
+traitsui==7.2.1
+trimesh==3.9.32
+typing-extensions==4.0.1
+tzdata==2022.1
+uritemplate==3.0.1
+urllib3==1.24.3
+vtk==9.1.0
+wcwidth==0.2.5
+Werkzeug==2.0.2
+whitenoise==6.2.0
+wslink==1.3.1
+xarray==0.19.0
+yarl==1.7.2
+zipp==3.7.0
