--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ geopandas==0.10.2
 gunicorn==20.1.0
 MarkupSafe==2.0.1
 numpy==1.19.2
+ortools==9.3.10459
 pandas==1.1.2
 pyshp==2.1.3
 python-dateutil==2.8.0
