--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ ortools==9.3.10459
 pandas==1.1.2
 pyshp==2.1.3
 python-dateutil==2.8.0
+python-decouple==3.6
 python-utils==2.5.6
 Rtree==0.9.7
 seaborn==0.11.0
